--- a/src/Components/styles.module.css
+++ b/src/Components/styles.module.css
@@ -10,67 +10,6 @@
     --Very-light-gray: hsl(228, 33%, 97%);
     --White: hsl(0, 0%, 100%);
   }
-/* .commentsection{
-    display: flex;
-    flex-direction: column;
-
-}
-.comment{
-    margin-bottom: 1rem;
-    display: grid;
-    grid-template-areas: 
-        "score user controls"
-        "score comment comment"
-        "score comment comment"
-    ;
-    grid-template-columns: auto 1fr auto;
-    gap: 1.5rem;
-    row-gap: 1rem;
-    color: var(--Grayish-Blue);
-    border: 1px solid red;
-}
-
-
-
-.acontrols{
-    align-items: center;
-}
-.delete{
-    color: var(--Soft-Red);
-    align-items: center;
-}
-
-.edit , .reply{
-    color: var(--Moderate-blue);
-    align-items: center;
-}
-.cscore{
-    color: var(--Moderate-blue);
-    font-weight: 500;
-    grid-area: score;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-    padding: .75rem;
-    padding-top: .5rem;
-    width: 1rem;
-    box-sizing: content-box;
-    background-color: var(--Very-light-gray);
-    border-radius: 8px;
-    align-self: flex-start;
-}
-
-
-
-.ctext{
-    grid-area: comment;
-    width: 100%;
-}
-.replyto{
-    color: var(--Moderate-blue);
-    font-weight: 500;
-} */
 .cuser{
     width: 100%;
     grid-area: user;
@@ -249,4 +188,26 @@
     padding: 10px 18px 10px 18px;
     color: #fff;
     font-family:Arial, Helvetica, sans-serif;
+}
+.commentContainer {
+    display: flex;
+    width: 40%;
+    background-color: #FFFFFF;
+    border: 1px solid white;
+    margin-left: 20px;
+}
+.userContent{
+    margin-left: 5px;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.updateInputContainer{
+    height: 90px;
+    border: 1px solid hsl(238, 40%, 52%);
+    border-radius: 8px;
+    padding: 10px;
+    font-family: sans-serif;
+    font-size: 15px;
 }
