--- a/src/Components/styles.module.css
+++ b/src/Components/styles.module.css
@@ -195,6 +195,7 @@
     background-color: #FFFFFF;
     border: 1px solid white;
     margin-left: 20px;
+    /* margin-top: 10px; */
 }
 .userContent{
     margin-left: 5px;
