--- a/src/Components/styles.module.css
+++ b/src/Components/styles.module.css
@@ -36,7 +36,7 @@
         display: flex;
         align-items: center;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.4rem;
         padding: .75rem;
         padding-top: .5rem;
         width: 1rem;
@@ -195,6 +195,9 @@
     background-color: #FFFFFF;
     border: 1px solid white;
     margin-left: 20px;
+    border-radius: 7px;
+
+    /* word-break: break-word; */
 }
 .userContent{
     margin-left: 5px;
