--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family:  "Rubrik"sans-serif;
+  /* font-family:  "Rubrik"sans-serif; */
   font-size: 15px;
   background-color:'#F5F6FA'
 }
